--- a/style.css
+++ b/style.css
@@ -53,6 +53,25 @@ article.media-post > footer ul {
   right: 0;
 }
 
+#clicked-heart {
+  border-radius: 10px;
+  background-color: rgb(0, 128, 6);
+  color: white;
+
+  margin: 1em;
+  padding: 1em;
+  padding-bottom: 3em;
+
+  position: fixed;
+  width: 20em;
+  height: 3em;
+
+  top: 0;
+  left: 0;
+  right: 0;
+  
+}
+
 #modal p {
   margin-bottom: 0;
 }
